<resources>

    <string name="app_name">Banta Touch Control</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Banta Touch Control</string>
    <string name="title_activity_mantenedor__producto">Banta Touch Control</string>
    <string name="Combobox">¿Qué reporte desea visualizar?</string>
    <string-array name="Seleccione">
        <item >Productos más vendidos</item>
        <item >Clientes más fieles</item>
        <item >Categorías más vendidas</item>
        <item >Vendedores con mayor producción</item>
        <item >Modificaciones de Stock</item>
        <item >Gastos de Proveedor</item>
    </string-array>
	 
	<string name="mpmenu_by_name">Por nombre</string>
	<string name="mpmenu_change">Cambiar orden</string>
	<string name="mpmenu_refresh">Recargar</string>		
	<string name="mpmenu_by_price">Por precio</string>
	<string name="mpmenu_by_stock">Por stock</string>
	<string name="mpmenu_by_code">Por código</string>	
	<string name="default_ip">190.22.193.82</string>
	<string name="default_port">8008</string>
	<string name="default_user"></string>
	<string name="default_password"></string>
	<!--<string name="default_ip">ks3271107.kimsufi.com</string>-->
	
</resources>