<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item 
		android:id="@+id/mpmenu_refresh"
		android:icon="@drawable/ic_menu_refresh"
		android:title="@string/mpmenu_refresh" 
		
	/>
<!-- esta wea solo esta definida pa android 4 .. android:showAsAction="ifRoom" -->
	<item 
		android:id="@+id/mpmenu_change"
		android:icon="@drawable/ic_menu_orden"
		android:title="@string/mpmenu_change"
	/>
	<item 
			android:id="@+id/mpmenu_by_name"
			android:icon="@drawable/ic_menu_nombre"
			android:title="@string/mpmenu_by_name"
		/>
	<item android:id="@+id/mpmenu_by_price" 
	      android:title="@string/mpmenu_by_price" 
	      android:icon="@drawable/ic_menu_precio"
	/>
	<item android:id="@+id/mpmenu_by_stock" android:title="@string/mpmenu_by_stock" 
				android:icon="@drawable/ic_menu_stock" 
		
	/>
	<item android:id="@+id/mpmenu_by_code" android:title="@string/mpmenu_by_code" 
				android:icon="@drawable/ic_menu_codigo"
		
/>
</menu>
